--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>vite-tailwind-vue3-template</title>
+		<title>demoTodo</title>
 
-		<meta name="description" content="vite-tailwind-vue3-template" />
+		<meta name="description" content="demoTodo" />
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="icon" href="/favicon.png" type="image/png" />
 		<link
